--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,9 +2,9 @@
 layout: default
 ---
 <div class="post">
-  <header class="post-header">
+  <!-- <header class="post-header">
     <h1 class="h2">{{ page.title }}</h1>
-  </header>
+  </header> -->
   <article class="post-content">
   {{ content }}
   </article>
